Update 1.0.8 Fixes for ADO

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,140 @@ pip-log.txt
 # Mac crap
 .DS_Store
 *.dcu
+/Source/1.0.4/__history/DASDDrv.dproj.local.~1~
+/Source/1.0.4/__history/DASDDrv.dproj.local.~2~
+/Source/1.0.4/__history/DASDDrv.dproj.local.~3~
+/Source/1.0.4/__history/DASDDrv_D11.dproj.local.~1~
+/Source/1.0.4/__history/DASDDrv_D11.dproj.local.~2~
+/Source/1.0.4/__history/DASDDrv_D11.dproj.local.~3~
+/Source/1.0.4/__history/DASDDrv_D11.dproj.local.~4~
+/Source/1.0.4/__history/DataAbstract_SDDriver_D16.dpk.~1~
+/Source/1.0.4/__history/DataAbstract_SDDriver_D16.dpk.~2~
+/Source/1.0.4/__history/uDASDDriver.pas.~1~
+/Source/1.0.4/__history/uDASQLDirUtils.pas.~1~
+/Source/1.0.4/__history/uDASQLDirUtils.pas.~2~
+/Source/1.0.4/DASDDrv.cfg
+/Source/1.0.4/DASDDrv.dpr
+/Source/1.0.4/DASDDrv.dproj
+/Source/1.0.4/DASDDrv.dproj.local
+/Source/1.0.4/DASDDrv.identcache
+/Source/1.0.4/DASDDrv.res
+/Source/1.0.4/DASDDrv_D11.dpr
+/Source/1.0.4/DASDDrv_D11.dproj
+/Source/1.0.4/DASDDrv_D11.dproj.local
+/Source/1.0.4/DASDDrv_D11.identcache
+/Source/1.0.4/DASDDrv_D11.res
+/Source/1.0.4/DASDDrv_D15.dpr
+/Source/1.0.4/DASDDrv_D15.dproj
+/Source/1.0.4/DASDDrv_D15.identcache
+/Source/1.0.4/DASDDrv_D16.dpr
+/Source/1.0.4/DASDDrv_D16.dproj
+/Source/1.0.4/DASDDrv_D16.dproj.local
+/Source/1.0.4/DASDDrv_D16.identcache
+/Source/1.0.4/DASDDrv_D16.res
+/Source/1.0.4/DASDDrv_Icon.ico
+/Source/1.0.4/DASDDrv_Icon1.ico
+/Source/1.0.4/DataAbstract_SDDriver_D11.dpk
+/Source/1.0.4/DataAbstract_SDDriver_D11.dproj
+/Source/1.0.4/DataAbstract_SDDriver_D11.dproj.2007
+/Source/1.0.4/DataAbstract_SDDriver_D11.res
+/Source/1.0.4/DataAbstract_SDDriver_D11.skincfg
+/Source/1.0.4/DataAbstract_SDDriver_D12.dpk
+/Source/1.0.4/DataAbstract_SDDriver_D12.dproj
+/Source/1.0.4/DataAbstract_SDDriver_D12.res
+/Source/1.0.4/DataAbstract_SDDriver_D15.dpk
+/Source/1.0.4/DataAbstract_SDDriver_D15.dproj
+/Source/1.0.4/DataAbstract_SDDriver_D15.dproj.2007
+/Source/1.0.4/DataAbstract_SDDriver_D15.res
+/Source/1.0.4/DataAbstract_SDDriver_D15_Icon.ico
+/Source/1.0.4/DataAbstract_SDDriver_D16.dpk
+/Source/1.0.4/DataAbstract_SDDriver_D16.dproj
+/Source/1.0.4/DataAbstract_SDDriver_D16.dproj.local
+/Source/1.0.4/DataAbstract_SDDriver_D16.res
+/Source/1.0.4/DataAbstract_SDDriverGroup_D11.groupproj
+/Source/1.0.4/uDASDDriver.pas
+/Source/1.0.4/uDASQLDirUtils.pas
+/Source/1.0.5/__history/DASDDrv.dpr.~1~
+/Source/1.0.5/__history/DASDDrv.dpr.~2~
+/Source/1.0.5/__history/DASDDrv.dproj.local.~1~
+/Source/1.0.5/__history/DASDDrv.dproj.local.~2~
+/Source/1.0.5/__history/DASDDrv.dproj.local.~3~
+/Source/1.0.5/__history/DASDDrv_D11.dproj.local.~1~
+/Source/1.0.5/__history/DASDDrv_D11.dproj.local.~2~
+/Source/1.0.5/__history/DASDDrv_D11.dproj.local.~3~
+/Source/1.0.5/__history/DASDDrv_D11.dproj.local.~4~
+/Source/1.0.5/__history/DataAbstract_SDDriver_D16.dpk.~1~
+/Source/1.0.5/__history/DataAbstract_SDDriver_D16.dpk.~2~
+/Source/1.0.5/__history/uDASDDriver.pas.~1~
+/Source/1.0.5/__history/uDASDDriver.pas.~2~
+/Source/1.0.5/__history/uDASDDriver.pas.~3~
+/Source/1.0.5/__history/uDASDDriver.pas.~4~
+/Source/1.0.5/__history/uDASQLDirUtils.pas.~1~
+/Source/1.0.5/__history/uDASQLDirUtils.pas.~2~
+/Source/1.0.5/DASDDrv.cfg
+/Source/1.0.5/DASDDrv.dpr
+/Source/1.0.5/DASDDrv.dproj
+/Source/1.0.5/DASDDrv.dproj.local
+/Source/1.0.5/DASDDrv.identcache
+/Source/1.0.5/DASDDrv.res
+/Source/1.0.5/DASDDrv_D11.dpr
+/Source/1.0.5/DASDDrv_D11.dproj
+/Source/1.0.5/DASDDrv_D11.dproj.local
+/Source/1.0.5/DASDDrv_D11.identcache
+/Source/1.0.5/DASDDrv_D11.res
+/Source/1.0.5/DASDDrv_D15.dpr
+/Source/1.0.5/DASDDrv_D15.dproj
+/Source/1.0.5/DASDDrv_D15.identcache
+/Source/1.0.5/DASDDrv_D16.dpr
+/Source/1.0.5/DASDDrv_D16.dproj
+/Source/1.0.5/DASDDrv_D16.dproj.local
+/Source/1.0.5/DASDDrv_D16.identcache
+/Source/1.0.5/DASDDrv_D16.res
+/Source/1.0.5/DASDDrv_D16.skincfg
+/Source/1.0.5/DASDDrv_Icon.ico
+/Source/1.0.5/DASDDrv_Icon1.ico
+/Source/1.0.5/DataAbstract_SDDriver_D11.dpk
+/Source/1.0.5/DataAbstract_SDDriver_D11.dproj
+/Source/1.0.5/DataAbstract_SDDriver_D11.dproj.2007
+/Source/1.0.5/DataAbstract_SDDriver_D11.res
+/Source/1.0.5/DataAbstract_SDDriver_D11.skincfg
+/Source/1.0.5/DataAbstract_SDDriver_D12.res
+/Source/1.0.5/DataAbstract_SDDriver_D15.dpk
+/Source/1.0.5/DataAbstract_SDDriver_D15.dproj
+/Source/1.0.5/DataAbstract_SDDriver_D15.dproj.2007
+/Source/1.0.5/DataAbstract_SDDriver_D15.res
+/Source/1.0.5/DataAbstract_SDDriver_D15_Icon.ico
+/Source/1.0.5/DataAbstract_SDDriver_D16.dpk
+/Source/1.0.5/DataAbstract_SDDriver_D16.dproj
+/Source/1.0.5/DataAbstract_SDDriver_D16.dproj.local
+/Source/1.0.5/DataAbstract_SDDriver_D16.res
+/Source/1.0.5/uDASDDriver.pas
+/Source/1.0.5/uDASQLDirUtils.pas
+/Source/1.0.7/__history/uDASQLDirUtils.pas.~1~
+/Source/1.0.7/__history/uDASQLDirUtils.pas.~2~
+/Source/1.0.8/__history/DASDDrv.dpr.~1~
+/Source/1.0.8/__history/DASDDrv.dpr.~2~
+/Source/1.0.8/__history/DASDDrv.dpr.~3~
+/Source/1.0.8/__history/DASDDrv.dpr.~4~
+/Source/1.0.8/__history/DataAbstract_SDDriver_D16.dpk.~1~
+/Source/1.0.8/__history/DataAbstract_SDDriver_D18.dpk.~1~
+/Source/1.0.8/__history/uDASDDriver.pas.~57~
+/Source/1.0.8/__history/uDASDDriver.pas.~58~
+/Source/1.0.8/__history/uDASDDriver.pas.~59~
+/Source/1.0.8/__history/uDASDDriver.pas.~60~
+/Source/1.0.8/__history/uDASDDriver.pas.~61~
+/Source/1.0.8/__history/uDASDDriver.pas.~62~
+/Source/1.0.8/__history/uDASDDriver.pas.~63~
+/Source/1.0.8/__history/uDASDDriver.pas.~64~
+/Source/1.0.8/__history/uDASDDriver.pas.~65~
+/Source/1.0.8/__history/uDASDDriver.pas.~66~
+/Source/1.0.8/__history/uDASQLDirUtils.pas.~1~
+/Source/1.0.8/__history/uDASQLDirUtils.pas.~2~
+/Source/1.0.8/__history/uDASQLDirUtils.pas.~3~
+/Source/1.0.8/__history/uDASQLDirUtils.pas.~4~
+/Source/1.0.8/__history/uDASQLDirUtils.pas.~5~
+/Source/1.0.8/__history/uDASQLDirUtils.pas.~6~
+/Source/1.0.8/__history/uDASQLDirUtils.pas.~7~
+*.local
+*.identcache
+*.skincfg
